*Fix unmatch bug to find alternative matches